--- a/client/app/admin/templates/navigation.html
+++ b/client/app/admin/templates/navigation.html
@@ -239,9 +239,11 @@
                     <li>
                         <a class="active" href="#/"> ראשי <i class="fa fa-dashboard fa-fw"></i></a>
                     </li>
-                    <li>
-                        <a href="#"><span class="fa arrow pull-left"></span>דוגמא <i class="fa fa-bar-chart-o fa-fw"></i></a>
-                        <ul class="nav nav-second-level">
+                    <li  data-toggle="collapse" data-target="#products" class="collapsed active">
+                         <a href="#">דוגמא  <i class="fa fa-bar-chart-o fa-fw"></i></a> 
+
+                    </li>
+                        <ul class="sub-menu collapse nav nav-second-level" id="products">
                             <li>
                                 <a href="#/flot">Flot Charts</a>
                             </li>
@@ -250,16 +252,17 @@
                             </li>
                         </ul>
                         <!-- /.nav-second-level -->
-                    </li>
+                
                     <li>
                         <a href="#/tables"> טבלאות <i class="fa fa-table fa-fw"></i></a>
                     </li>
                     <li>
                         <a href="#/forms"> טפסים <i class="fa fa-edit fa-fw"></i></a>
                     </li>
-                    <li>
-                        <a href="#"> <span class="fa arrow pull-left"></span>ניהול תוכן <i class="fa fa-wrench fa-fw"></i></a>
-                        <ul class="nav nav-second-level">
+                    <li data-toggle="collapse" data-target="#products2" class="collapsed active">
+                    
+                        <a href="#"> <span class="fa arrow pull-left"></span>ניהול תוכן <i class="fa fa-wrench fa-fw"></i></a></li>
+                        <ul class="sub-menu collapse nav nav-second-level" id="products2">
                             <li>
                                 <a href="#/panels-wells">Panels and Wells</a>
                             </li>
@@ -277,7 +280,7 @@
                             </li>
                         </ul>
                         <!-- /.nav-second-level -->
-                    </li>
+               
             
           
                 </ul>
