database not working

--- a/client/app/admin/auth/views/logIn/logIn.html
+++ b/client/app/admin/auth/views/logIn/logIn.html
@@ -34,11 +34,11 @@
             
                  
                 <div class="form-group">
-                  <input class="form-control input-lg" ng-model="obj.user.userId" placeholder="User" type="text">
+                  <input class="form-control input-lg" ng-model="obj.user._userId" placeholder="User" type="text">
               </div>
                  
               <div class="form-group">
-                <input class="form-control input-lg" ng-model="obj.user.password" placeholder="Password"  type="password" value="">
+                <input class="form-control input-lg" ng-model="obj.user._password" placeholder="Password"  type="password" value="">
               </div>
                
               <div class="checkbox">
