--- a/client/app/admin/auth/views/logIn/logIn.html
+++ b/client/app/admin/auth/views/logIn/logIn.html
@@ -24,7 +24,7 @@
           <div class="col-md-12">
           <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
 		  </div>	
-      </div> -->
+      </div> --> 
         <div class="modal-header">
        
          
@@ -43,11 +43,11 @@
                
               <div class="checkbox">
                   <label>
-                    <input name="remember" type="checkbox" value="Remember Me"> Remember Me
+                    <input type="checkbox" _ng-model="obj.user._isRememberMe"> Remember Me
                   </label>
                 </div>
               <input class="btn btn-lg btn-success btn-block" ng-click="logIn()"  value="Login">
-           
+         
       
           </div>
   </div>
